--- a/lua/Makefile
+++ b/lua/Makefile
@@ -2,13 +2,13 @@
 CC=emcc
 CCFLAGS=-Wall -s WASM=1 -s EXPORT_ALL=1 -s EXPORTED_RUNTIME_METHODS='["ccall","cwrap"]'
 
-all:	lua main.wasm
+all:	lua luatest.wasm
 
 clean:
-	rm main.html main.js *.wasm
+	rm luatest.html luatest.mjs *.wasm
 
 lua:
 	$(MAKE) -C lua-5.4.0/
 
-main.wasm:	main.c
-	$(CC) $(CCFLAGS) -I./lua-5.4.0/ -L./lua-5.4.0/ -o main.js main.c -llua
+luatest.wasm:	luatest.c
+	$(CC) $(CCFLAGS) -I./lua-5.4.0/ -L./lua-5.4.0/ -o luatest.mjs luatest.c -llua
