--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@types/dompurify": "^2.3.1",
+    "@types/emscripten": "^1.39.5",
     "@types/jquery": "^3.5.6",
     "@types/marked": "^3.0.1",
     "@types/mathjax": "0.0.37",
