Embedding Lua scripts in the virtual Emscripten file system

--- a/lua/Makefile
+++ b/lua/Makefile
@@ -5,10 +5,10 @@ CCFLAGS=-Wall -s WASM=1 -s EXPORT_ALL=1 -s EXPORTED_RUNTIME_METHODS='["ccall","c
 all:	lua lua_bridge.wasm
 
 clean:
-	rm lua_bridge.mjs *.wasm
+	rm lua_bridge.mjs lua_bridge.wasm lua_bridge.data
 
 lua:
 	$(MAKE) -C lua-5.4.0/
 
-lua_bridge.wasm:	lua_bridge.c
-	$(CC) $(CCFLAGS) -I./lua-5.4.0/ -L./lua-5.4.0/ -o lua_bridge.mjs lua_bridge.c -llua
+lua_bridge.wasm:	lua_bridge.c scripting/*.lua
+	$(CC) $(CCFLAGS) -I./lua-5.4.0/ -L./lua-5.4.0/ -o lua_bridge.mjs lua_bridge.c -llua --preload-file scripting/
